Fixes center alignment on modals

--- a/httpdocs/assets/css/frontend/frontend.css
+++ b/httpdocs/assets/css/frontend/frontend.css
@@ -238,6 +238,7 @@
 .popup-content {
   display: table;
   transition: height 0.3s ease-out;
+  margin: 0 auto;
 }
 .ui-autocomplete {
   background: #fff;
