--- a/httpdocs/assets/less/popup.less
+++ b/httpdocs/assets/less/popup.less
@@ -110,5 +110,6 @@
 .popup-content {
   display: table;
   transition: height 0.3s ease-out;
+  margin: 0 auto;
 }
 
